Sat Apr 27 19:52:32 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added new QUIET channel user mode that can be used to
	  quiet a user in a channel.  Updated the protocol specs but
	  it wasn't implemented yet.  Protocol TODO #27.  Affected
	  file is lib/silccore/silcmode.h.

Mon Apr 22 09:09:44 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added BLOCK_INVITE user mode to be able to block incoming
	  invite notifications.  Protoocol TODO #26.  Affected files
	  are lib/silccore/silcmode.h, lib/silcclient/command.c and
	  silcd/command.c.

	* SILC Publickey fields MUST be UTF-8 encoded now.  Updated
	  the protocol specs and the code.  Affected file is
	  lib/silccrypt/silcpkcs.c.

Sun Apr 21 19:44:38 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Disconnect Payload includes now the status type.  Updated
	  the protocol specs and the code.  Protocol TODO #25.
	  Affected files are silcd/server.c, lib/silcclient/client.c.

	* Added NOT_AUTHENTICATED, BAD_SERVER_ID, INCOMPLETE_INFORMATION,
	  KEY_EXCHANGE_FAILED and BAD_VERSION error status types.
	  Moved the silc_client_command_status_messages table to the
	  lib/silcutil/silcutil.c and added new funtion
	  silc_get_status_message, which deprecates function
	  silc_client_status_message.  Affected files are 
	  lib/silccore/silcstatus.h, lib/silcclient/command_reply.[ch],
	  lib/silcutil/silcutil.[ch].

Fri Apr 19 17:35:15 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Defined that the nickname hash in Client ID MUST be from
	  lowercase nickname.  This effectively changes nicknames in
	  SILC to case-insensitive.  Updated the protocol specs and
          the code.  Affected files are lib/silcutil/silcutil.[ch],
          silcd/serverid.c, and silcd/idlist.c.

	* Added new channel user modes BLOCK_MESSAGES_USERS and
	  BLOCK_MESSAGES_ROBOTS.  Updated the protocol specs and the
	  code.  Affected files are lib/silccore/silcmode.h,
	  lib/silcclient/command.c, and silcd/packet_send.c.
